--- a/app/views/therapy_entries/_form.html.haml
+++ b/app/views/therapy_entries/_form.html.haml
@@ -20,7 +20,7 @@
   = f.text_area :comment, :rows => "5"
   
   .btn-group
-    = link_to 'Zurück', root_path, class: "btn btn-large"
-    = f.submit "Speichern", class: "btn btn-primary btn-large"
+    = link_to 'Zurück', root_path, class: "btn"
+    = f.submit "Speichern", class: "btn btn-primary"
     
  
