--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -16,6 +16,6 @@
   = f.label :password_confirmation, "Confirm"
   = f.password_field :password_confirmation
 
-  = f.submit "Speichern", class: "btn btn-primary btn-large"
+  = f.submit "Speichern", class: "btn btn-primary"
 
 
