--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -49,6 +49,11 @@ h1 {
       color: #fff;
       text-decoration: none;
     }
+  }
+  a {
+    display: block;
+    width: 100%;
+    height: 100%;
   } 
 }
 
