--- a/app/views/periodicals/week.html.haml
+++ b/app/views/periodicals/week.html.haml
@@ -26,7 +26,7 @@
           -else 
             %dd Keine Behandlung
 .row
-  .span9
+  .span9.pagination-centered
     .btn-group
       = link_to week_path(@date - 7.days), class: "btn" do
         %i.icon-backward
