--- a/app/views/periodicals/day.html.haml
+++ b/app/views/periodicals/day.html.haml
@@ -5,7 +5,7 @@
       = @date.strftime("%a, %d. %B")
 .row
   .span9.greybox
-    %h2= link_to "Meine heutigen Schmerzeinträge", pain_entries_path
+    %h2 Meine heutigen Schmerzeinträge
     %table.table.table_striped
       %tbody
         - @pain_entries.each do |pain_entry|
@@ -17,11 +17,12 @@
                   %i.icon-edit.icon-white
                 =link_to pain_entry, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-small", remote: true do
                   %i.icon-trash.icon-white
-    .btn-group        
-      = link_to 'Neuer Eintrag', new_pain_entry_path(date: @date.to_date), class: "btn btn-primary"
+    .btn-group.pull-right        
+      = link_to new_pain_entry_path(date: @date.to_date), class: "btn btn-primary" do
+        Neuer Eintrag
 .row
   .span9.greybox.no-header-box
-    %h2= link_to "Meine heutigen Behandlungseinträge", therapy_entries_path
+    %h2 Meine heutigen Behandlungseinträge
     %table.table.table_striped
       %tbody
         - @therapy_entries.each do |therapy_entry|
@@ -33,6 +34,6 @@
                   %i.icon-edit.icon-white
                 =link_to therapy_entry, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-small", remote: true do
                   %i.icon-trash.icon-white
-    .btn-group
-      = link_to 'Neuer Eintrag', new_therapy_entry_path(date: @date.to_date), class: "btn btn-primary"
-    
+    .btn-group.pull-right
+      = link_to new_therapy_entry_path(date: @date.to_date), class: "btn btn-primary" do
+        Neuer Eintrag
