--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -103,6 +103,7 @@ form {
   line-height: 1;
   a {
     color: #000;
+    font-weight: bold;
   }
 }
 
@@ -151,7 +152,7 @@ footer ul li {
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
   padding: 0px 10px 10px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 .week-box {
   min-height: 200px;
@@ -159,6 +160,7 @@ footer ul li {
 }
 .no-header-box {
   border-radius: 5px;
+  margin-top: 20px;
 }
 
 
