--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -5,6 +5,7 @@
 
 $grayMediumLight: #eaeaea;
 $grayDark: #a6a6a6;
+$blue: #0088cc;
 
 /* universal */
 
@@ -34,7 +35,7 @@ h1 {
   color: $grayLight;
   font-weight: normal;
   &.form {
-    background-color: $grayDark;
+    background-color: $blue;
   }
   &.day, &.week, &.form {
     margin: 2px 0px 0px 0px;
@@ -56,7 +57,7 @@ h1 {
 }
 
 h2 {
-  font-size: 1.5em;
+  font-size: 1.3em;
   letter-spacing: -1px;
   margin-bottom: 10px;
   font-weight: normal;
@@ -80,13 +81,44 @@ dd {
 .btn {
   background-image: none;
 }
+.new-entry {
+  margin-bottom: 10px;
+}
 
 form {
+  select {
+    float: left;
+    margin-right: 10px;
+  }
   .btn-group {
     display: block;
     .btn-back {
       width: 200px;
     }
+  }
+  table {
+    width: 100%;
+    margin-top: 20px;
+    td{
+      padding: 5px;
+    }
+  }
+  .date_select {
+    select{
+      width: 150px;
+      #pain_entry_date_1i{ width: 50px; }
+      #pain_entry_date_3i{ width: 60px; }
+      #pain_entry_date_2i{ width: 110px; }
+    }
+    textarea {
+      width: 200px;
+    }
+    select#pain_entry_date_3i{ 
+      width: 60px; 
+    }
+  }
+  label {
+     text-transform: uppercase;
   }
 }
 
@@ -108,8 +140,14 @@ form {
 }
 
 #logo:hover a{
-  color: #0077bb;
+  color: #666666;
   text-decoration: none;
+}
+
+/* table */
+
+td.actions {
+  padding-right: 0;
 }
 
 /* footer */
@@ -151,8 +189,8 @@ footer ul li {
   background: #f9f9f9;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
-  padding: 0px 10px 10px;
-  margin-bottom: 10px;
+  padding: 0px 10px 0px;
+  margin-bottom: 20px;
 }
 .week-box {
   min-height: 200px;
@@ -160,7 +198,6 @@ footer ul li {
 }
 .no-header-box {
   border-radius: 5px;
-  margin-top: 20px;
 }
 
 
