--- a/app/views/periodicals/week.html.haml
+++ b/app/views/periodicals/week.html.haml
@@ -1,10 +1,10 @@
 - provide(:title, "Deine Woche, #{current_user.name}!")
 .row
-  - (@date-5.days).upto(@date + 1.day) do |date|
+  - (@date).upto(@date + 6.day) do |date|
     .span3
-      %h1.week{ style:  "background: #{generate_color_from_value(add_up_values(@pain_entries[date]))}" }
+      %h1.week{ style:  "background: #{ generate_color_from_value(add_up_values(@pain_entries[date])) }" }
         = link_to date.strftime("%a, %d. %b"), day_path(date)
-      .week-box
+      .week-box{ style: "background: #{ generate_color_from_date(date) }"}
         %dl
           %dt Schmerzen
           - if @pain_entries.include?(date)
@@ -15,7 +15,7 @@
                 %dd= link_to short_pain_description(entry), edit_pain_entry_path(entry)
           -else 
             %dd Keine Schmerzen
-        %dl    
+        %dl
           %dt Behandlungen
           - if @therapy_entries.include?(date)
             - if @therapy_entries[date].count > 2
