--- a/app/views/pain_entries/_form.html.haml
+++ b/app/views/pain_entries/_form.html.haml
@@ -1,40 +1,44 @@
 = form_for(@pain_entry) do |f|
   = render 'shared/error_messages', item: @pain_entry
-  %table.table
-    %tr
-      %td= f.label t(:occured_at)
-      %td
+  .fields  
+    .fieldset
+      .field.label-field= f.label t(:occured_at)
+      .field
         = f.select :occured_at, ["nachts", "morgens", "vormittags", "mittags", "nachmittags", "abends"]
-        .not_today= link_to t(:not_today), "#", class: "btn btn-primary"
-    %tr.date_select{ style: "display: none" }
-      %td= f.label t(:what_date)
-      %td= f.date_select :date,  end_year: Time.now.year, order: [:day, :month, :year]
+        .not_today
+          - if @pain_entry.date == Date.today
+            = link_to t(:not_today), "#", class: "btn btn-primary"
+          - else
+            = link_to "nicht für den #{@pain_entry.date.strftime("%a, %d. %b")}", '#', class: "btn btn-primary"
+    .fieldset.date_select{ style: "display: none" }
+      .field.label-field= f.label t(:what_date)
+      .field= f.date_select :date,  end_year: Time.now.year, order: [:day, :month, :year]
   
-    %tr
-      %td= f.label t(:body_part)
-      %td= f.select :body_part, ["Kopf", "Nacken", "Schulter", "Oberkörper", "Brust", "Arm", "Hand", "Finger", "Bauch", "unterer Rücken", "Gesäß", "Lenden", "Hüfte", "Bein", "Knie", "Fuß", "Zehen"]
-    %tr
-      %td= f.label t(:side)
-      %td= f.select :side, ["beidseitig", "mitte", "rechts", "links"]
-    %tr
-      %td= f.label t(:pain_type)
-      %td= f.select :pain_type, ["stechender Schmerz", "pulsierender Schmerz", "krampfartiger Schmerz", "Jucken", "Kribbeln", "Schwindel"]
-    %tr
-      %td= f.label t(:value)
-      %td{ style: "column-span: 2;" }
+    .fieldset
+      .field.label-field= f.label t(:body_part)
+      .field= f.select :body_part, ["Kopf", "Nacken", "Schulter", "Oberkörper", "Brust", "Arm", "Hand", "Finger", "Bauch", "unterer Rücken", "Gesäß", "Lenden", "Hüfte", "Bein", "Knie", "Fuß", "Zehen"]
+    .fieldset
+      .field.label-field= f.label t(:side)
+      .field= f.select :side, ["beidseitig", "mitte", "rechts", "links"]
+    .fieldset
+      .field.label-field= f.label t(:pain_type)
+      .field= f.select :pain_type, ["stechender Schmerz", "pulsierender Schmerz", "krampfartiger Schmerz", "Jucken", "Kribbeln", "Schwindel"]
+    .fieldset
+      .field.label-field= f.label t(:value)
+      .field{ style: "column-span: 2;" }
         %small sehr schwach
         = f.range_field :value, options = { min: 0, max: 100, step: 1 }
         %small unerträglich
-    %tr
-      %td= f.label t(:duration)
-      %td= f.select :duration, ["impulsartig", "ein paar Minuten", "eine Stunde", "zwei bis vier Stunden", "vier bis sieben Stunden", "ganztägig"]
-    %tr
-      %td= f.label t(:comment)
-      %td= f.text_area :comment, :rows => "5"
-
-  .btn-group
-    = link_to t(:back), root_path, class: "btn"
-    = f.submit t(:save), class: "btn btn-primary"
+    .fieldset
+      .field.label-field= f.label t(:duration)
+      .field= f.select :duration, ["impulsartig", "ein paar Minuten", "eine Stunde", "zwei bis vier Stunden", "vier bis sieben Stunden", "ganztägig"]
+    .fieldset
+      .field.label-field= f.label t(:comment)
+      .field= f.text_area :comment, :rows => "5"
+    .fieldset
+      .btn-group
+        = link_to t(:back), root_path, class: "btn"
+        = f.submit t(:save), class: "btn btn-primary"
     
  
 :javascript
