--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -59,7 +59,7 @@ h1 {
 h2 {
   font-size: 1.3em;
   letter-spacing: -1px;
-  margin-bottom: 10px;
+  margin: 15px 0 10px 5px;
   font-weight: normal;
   color: $grayDark;
 }
