--- a/app/views/daily_entries/_form.html.haml
+++ b/app/views/daily_entries/_form.html.haml
@@ -35,7 +35,7 @@
         
     .fieldset
       .btn-group
-        = link_to 'Zurück', root_path, class: "btn"
+        = link_to 'Zurück', day_path(@daily_entry.date), class: "btn"
         = f.submit "Speichern", class: "btn btn-primary"
 :javascript
   $(".not_today").click(function(){
