--- a/app/views/pain_entries/_form.html.haml
+++ b/app/views/pain_entries/_form.html.haml
@@ -37,7 +37,7 @@
       .field= f.text_area :comment, :rows => "5"
     .fieldset
       .btn-group
-        = link_to t(:back), root_path, class: "btn"
+        = link_to t(:back), day_path(@pain_entry.date), class: "btn"
         = f.submit t(:save), class: "btn btn-primary"
 :javascript
   $(".not_today").click(function(){
