--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -34,10 +34,10 @@ h1 {
   margin-bottom: 20px;
   color: $grayLight;
   font-weight: normal;
-  &.form {
+  &.form, &.month {
     background-color: $blue;
   }
-  &.day, &.week, &.form {
+  &.day, &.week, &.form, &.month {
     margin: 2px 0px 0px 0px;
     color: white;
     border-top-left-radius: 5px;
@@ -158,7 +158,9 @@ dl {
   display: block;
   float: left;
 }
-
+dl.day {
+  padding: 0 20px 0 0;
+}
 
 /* table */
 table {
