--- a/app/views/periodicals/day.html.haml
+++ b/app/views/periodicals/day.html.haml
@@ -6,33 +6,33 @@
 .row
   .span9.greybox
     %h2 Dein Tag
-    %table.table
-      %thead
-        %tr
-          %th.center= t(:weight)
-          %th.center= t(:pain_degree)
-          %th.center= t(:emotion_degree)
-          %th.center= t(:menstruation)
-          %th  
-      %tbody
-        %tr
-          %td.center
-            - if @daily_entry 
-              = "#{@daily_entry.weight} kg"
-              %i{ class: "icon-arrow-#{ weight_tendency(@daily_entry, @date) }"}
-          %td.center= pain_degree_in_words(@daily_entry.pain) if @daily_entry
-          %td.center= emotion_degree_in_words(@daily_entry.emotion) if @daily_entry
-          %td.center= (@daily_entry.menstruation ? '√' : '-') if @daily_entry 
-          %td.actions
-            .btn-group.pull-right
-              - if @daily_entry
-                = link_to edit_daily_entry_path(@daily_entry.id), class: "btn btn-primary btn-small" do
-                  %i.icon-edit.icon-white
-                =  link_to @daily_entry, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-small" do
-                  %i.icon-trash.icon-white
-              - else
-                = link_to new_daily_entry_path(date: @date.to_date), class: "btn btn-primary btn-small" do
-                  %i.icon-plus.icon-white
+    %dl.day
+      %dt= t(:weight)
+      %dd
+        - if @daily_entry 
+          = "#{@daily_entry.weight} kg"
+          %i{ class: "icon-arrow-#{ weight_tendency(@daily_entry, @date) }"}
+    %dl.day
+      %dt= t(:pain_degree)
+      %dd= pain_degree_in_words(@daily_entry.pain) if @daily_entry
+    %dl.day
+      %dt= t(:emotion_degree)
+      %dd= emotion_degree_in_words(@daily_entry.emotion) if @daily_entry
+    %dl.day
+      %dt= t(:menstruation)
+      %dd= (@daily_entry.menstruation ? '√' : '-') if @daily_entry 
+    %dl.day
+      %dt
+      %dd      
+        .btn-group.pull-right
+          - if @daily_entry
+            = link_to edit_daily_entry_path(@daily_entry.id), class: "btn btn-primary btn-small" do
+              %i.icon-edit.icon-white
+            =  link_to @daily_entry, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-small" do
+              %i.icon-trash.icon-white
+          - else
+            = link_to new_daily_entry_path(date: @date.to_date), class: "btn btn-primary btn-small" do
+              %i.icon-plus.icon-white
 
       
 .row
