navbar for painchart

--- a/app/views/periodicals/month.html.haml
+++ b/app/views/periodicals/month.html.haml
@@ -7,3 +7,13 @@
     #month-pain-chart
     %script{ type: "text/javascript" }
       $("#month-pain-chart").monthPainChart()
+.navbar
+  .navbar-inner
+    %ul.nav
+      %li=link_to "Schmerz"
+      %li.divider-vertical
+      %li=link_to "Behandlung"
+      %li.divider-vertical
+      %li=link_to "Gewicht"
+      %li.divider-vertical
+      %li=link_to "Stimmung"
